# flake8-importlinter

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
flake8_importlinter/: __init__.py  plugin.py
tests/: test_integration.py  test_plugin.py
tests/fixtures/: mock_importlinter.py
tests/integration/: .importlinter  .importlinter.forbidden_contract  .importlinter.layers_contract
tests/integration/mypackage/high/: module_a.py
tests/integration/mypackage/low/: module_b.py  module_c.py
